@@ -18,6 +18,7 @@
 package org.apache.cassandra.tools.nodetool;
 
 import com.google.common.math.DoubleMath;
+import java.util.Map;
 
 import io.airlift.airline.Command;
 
@@ -45,6 +46,11 @@ public class GetCompactionThroughput extends NodeToolCmd
                 throw new RuntimeException("Use the -d flag to quiet this error and get the exact throughput in MiB/s");
 
             probe.output().out.println("Current compaction throughput: " + probe.getCompactionThroughput() + " MB/s");
+
+            Map<String, String> currentCompactionThroughputMetricsMap = probe.getCurrentCompactionThroughputMiBPerSec();
+            probe.output().out.println("Current compaction throughput (1 minute): " + currentCompactionThroughputMetricsMap.get("1minute") + " MiB/s");
+            probe.output().out.println("Current compaction throughput (5 minute): " + currentCompactionThroughputMetricsMap.get("5minute") + " MiB/s");
+            probe.output().out.println("Current compaction throughput (15 minute): " + currentCompactionThroughputMetricsMap.get("15minute") + " MiB/s");
         }
     }
 }
